// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary component is rendered correctly with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $12.34
  </h3>
</div>
`;

exports[`ExpenseSummary component is rendered correctly with 2 expense 1`] = `
<div>
  <h3>
    Viewing 
    2
     
    expenses
     totalling 
    $24.68
  </h3>
</div>
`;
